# kerr-engine

./: .gitattributes  .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  build.rs  run1_shakespeare_summary.json  run2_children_summary.json  run3_children_shakespeare_summary.json  run4_shakespeare_children_summary.json  run_seed_robustness.sh  run_test2_legal.sh  rustc-ice-2026-03-16T12_56_30-6372.txt  rustc-ice-2026-03-16T13_00_09-18512.txt  training_summary.json
.cargo/: config.toml
investigations/: WAVE-DISPATCH-ANALYSIS.md  gpu_parallel_test.txt  gpu_sustained_test.txt
reference/: export_weights.py  validate_gradients.py
research-lab/: wave-memory-mechanism.md
scaling-tests/: FINDINGS.md  nan_detect.patch
seed_robustness/: seed100_child_only.json  seed100_child_then_shak.json  seed100_shak_only.json  seed100_shak_then_child.json  seed200_child_only.json  seed200_child_then_shak.json  seed200_shak_only.json  seed200_shak_then_child.json  seed300_child_only.json  seed300_child_then_shak.json  seed300_shak_only.json  seed300_shak_then_child.json  seed400_child_only.json  seed400_child_then_shak.json  seed400_shak_only.json  seed400_shak_then_child.json  seed42_child_only.json  seed42_child_then_shak.json  seed42_shak_only.json  seed42_shak_then_child.json
shaders/: attn_backward_dkv.wgsl  attn_backward_scores.wgsl  deinterleave.wgsl  gelu.wgsl  gelu_backward.wgsl  kerr_backward_batch.wgsl  kerr_rk4_step.wgsl  kerr_step.wgsl  kerr_step_batch.wgsl  layer_norm.wgsl  layer_norm_backward.wgsl  layer_norm_batch.wgsl  matvec.wgsl  matvec_backward.wgsl  (+15 more)
(+50 files in other folders)
